infra/piska/piska2/untitled folder/testtwo/infra/redis1212121/rendered/04-service-redis1212121-headless.yaml
# Source: redis1212121/charts/redis/templates/headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis1212121-headless
  namespace: "infra-redis"
  labels:
    app.kubernetes.io/instance: redis1212121
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: redis
    app.kubernetes.io/version: 7.2.5
    helm.sh/chart: redis-19.5.5
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: tcp-redis
      port: 6379
      targetPort: redis
  selector:
    app.kubernetes.io/instance: redis1212121
    app.kubernetes.io/name: redis
